--- a/Registro/app/build.gradle
+++ b/Registro/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 15
@@ -17,11 +17,19 @@ android {
 
 dependencies {
 
-    compile 'com.android.support:appcompat-v7:24.0.0'
+
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.unstoppable:submitbutton:1.1.3'
     compile 'com.jaredrummler:material-spinner:1.2.5'
+    compile 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    compile 'com.gjiazhe:scrollparallaximageview:1.0'
+    compile 'com.google.code.gson:gson:2.8.5'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
