--- a/Registro/app/src/main/AndroidManifest.xml
+++ b/Registro/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:supportsRtl="true" >
 
         <activity android:name="com.libre.registro.ui.MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name="com.libre.registro.ui.Splash"
             android:screenOrientation="portrait">
 
         </activity>
