--- a/Registro/app/src/main/AndroidManifest.xml
+++ b/Registro/app/src/main/AndroidManifest.xml
@@ -38,5 +38,10 @@
             android:theme="@style/Theme.AppCompat">
 
         </activity>
+        <activity android:name="com.libre.registro.ui.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat">
+
+        </activity>
     </application>
 </manifest>
