--- a/Promotor/app/build.gradle
+++ b/Promotor/app/build.gradle
@@ -6,12 +6,20 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 21
+        jackOptions {
+            enabled true
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
         }
     }
+
+
+
+
 }
 
 dependencies {
@@ -25,9 +33,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.unstoppable:submitbutton:1.1.3'
     compile 'com.jaredrummler:material-spinner:1.2.5'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'android.arch.persistence.room:runtime:1.0.0-alpha1'
-    compile 'android.arch.persistence.room:compiler:1.0.0-alpha1'
+    compile 'me.dm7.barcodescanner:zxing:1.9.8'
+    compile 'com.github.michaldrabik:tapbarmenu:1.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
