--- a/Promotor/app/src/main/AndroidManifest.xml
+++ b/Promotor/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-sdk
         android:minSdkVersion="21"
         android:targetSdkVersion="23" />
@@ -23,7 +24,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat">
         </activity>
-
+        <activity android:name="com.libre.escuadronpromotor.ui.ScannerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat">
+        </activity>
         <activity android:name="com.libre.escuadronpromotor.ui.Splash"
             android:screenOrientation="portrait">
             <intent-filter>
