--- a/Registro/app/src/main/AndroidManifest.xml
+++ b/Registro/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.libre.registro">
+    package="com.libre.escuadroncliente">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -20,12 +20,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true" >
 
-        <activity android:name="com.libre.registro.ui.MarketActivity"
+        <activity android:name="com.libre.escuadroncliente.ui.MarketActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat">
         </activity>
 
-        <activity android:name="com.libre.registro.ui.Splash"
+        <activity android:name="com.libre.escuadroncliente.ui.Splash"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"
@@ -34,12 +34,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.libre.registro.ui.MainActivity"
+        <activity android:name="com.libre.escuadroncliente.ui.RegisterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat">
 
         </activity>
-        <activity android:name="com.libre.registro.ui.LoginActivity"
+        <activity android:name="com.libre.escuadroncliente.ui.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat">
 
