--- a/Registro/app/src/main/AndroidManifest.xml
+++ b/Registro/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true" >
+        android:supportsRtl="true"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false">
 
         <activity android:name="com.libre.escuadroncliente.ui.MarketActivity"
             android:screenOrientation="portrait"
