--- a/Registro/app/build.gradle
+++ b/Registro/app/build.gradle
@@ -19,10 +19,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support:support-v4:26.0.1'
     compile 'com.android.support:design:26.0.1'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-storage:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-auth:16.0.1'
+    compile 'com.google.firebase:firebase-storage:16.0.1'
+    compile 'com.google.firebase:firebase-database:16.0.1'
+    compile 'com.google.firebase:firebase-messaging:17.0.0'
     compile 'com.unstoppable:submitbutton:1.1.3'
     compile 'com.jaredrummler:material-spinner:1.2.5'
     compile 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
@@ -31,8 +32,10 @@ dependencies {
     compile 'com.github.dimorinny:floating-text-button:0.0.4'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.github.michaldrabik:tapbarmenu:1.0.5'
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
-
+    compile 'org.osmdroid:osmdroid-android:6.0.1'
+    compile 'com.github.MKergall:osmbonuspack:6.5.1'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
+    compile 'com.google.android.gms:play-services-places:9.2.0'
 
 
 }
