--- a/Promotor/app/build.gradle
+++ b/Promotor/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.jaredrummler:material-spinner:1.2.5'
     compile 'me.dm7.barcodescanner:zxing:1.9.8'
     compile 'com.github.michaldrabik:tapbarmenu:1.0.5'
+    compile 'org.osmdroid:osmdroid-android:6.0.1'
+    compile 'com.github.MKergall:osmbonuspack:6.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
