--- a/Promotor/app/src/main/AndroidManifest.xml
+++ b/Promotor/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true" >
 
+        <activity android:name="com.libre.escuadronpromotor.ui.ListDeliveryActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat">
+        </activity>
         <activity android:name="com.libre.escuadronpromotor.ui.ListUsersActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat">
