--- a/Registro/app/build.gradle
+++ b/Registro/app/build.gradle
@@ -5,7 +5,9 @@ android {
     buildToolsVersion '26.0.1'
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 26
+        versionCode 2
+        versionName "1.0"
     }
     buildTypes {
         release {
