--- a/Registro/app/src/main/AndroidManifest.xml
+++ b/Registro/app/src/main/AndroidManifest.xml
@@ -20,6 +20,16 @@
         android:supportsRtl="true"
         android:largeHeap="true"
         android:hardwareAccelerated="false">
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.libre.escuadroncliente.ui.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider_path"/>
+        </provider>
+
         <service android:name="com.libre.escuadroncliente.ui.services.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
