--- a/Registro/app/build.gradle
+++ b/Registro/app/build.gradle
@@ -6,8 +6,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 3
-        versionName "1.0"
+        versionCode 4
+        versionName "1.3.1"
     }
     buildTypes {
         release {
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.github.MKergall:osmbonuspack:6.5.1'
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
+    compile 'com.github.mjn1369:prettydialog:1.0.4'
 
 
 }
