--- a/Registro/app/build.gradle
+++ b/Registro/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
@@ -6,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 4
-        versionName "1.3.1"
+        versionCode 9
+        versionName "1.4.3"
     }
     buildTypes {
         release {
@@ -33,12 +34,12 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'com.github.dimorinny:floating-text-button:0.0.4'
     compile 'com.etsy.android.grid:library:1.0.5'
-    compile 'com.github.michaldrabik:tapbarmenu:1.0.5'
     compile 'org.osmdroid:osmdroid-android:6.0.1'
     compile 'com.github.MKergall:osmbonuspack:6.5.1'
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
     compile 'com.github.mjn1369:prettydialog:1.0.4'
+    compile 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
 
 }
