--- a/Registro/build.gradle
+++ b/Registro/build.gradle
@@ -5,11 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.google.gms:google-services:4.0.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,6 +26,10 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {url 'https://maven.google.com/'}
+
+
+
     }
 }
 
