--- a/Promotor/app/src/main/AndroidManifest.xml
+++ b/Promotor/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="23" />
+    <uses-sdk  />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
