--- a/Promotor/app/build.gradle
+++ b/Promotor/app/build.gradle
@@ -21,21 +21,21 @@ android {
 
 dependencies {
 
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:support-v4:26.0.1'
-    compile 'com.android.support:design:26.0.1'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-storage:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.unstoppable:submitbutton:1.1.3'
-    compile 'com.jaredrummler:material-spinner:1.2.5'
-    compile 'me.dm7.barcodescanner:zxing:1.9.8'
-    compile 'com.github.michaldrabik:tapbarmenu:1.0.5'
-    compile 'org.osmdroid:osmdroid-android:6.0.1'
-    compile 'com.github.MKergall:osmbonuspack:6.5.1'
-    compile 'com.github.mjn1369:prettydialog:1.0.4'
-    compile 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
+    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.android.support:support-v4:26.0.1'
+    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.unstoppable:submitbutton:1.1.3'
+    implementation 'com.jaredrummler:material-spinner:1.2.5'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.github.michaldrabik:tapbarmenu:1.0.5'
+    implementation 'org.osmdroid:osmdroid-android:6.0.1'
+    implementation 'com.github.MKergall:osmbonuspack:6.5.1'
+    implementation 'com.github.mjn1369:prettydialog:1.0.4'
+    implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     
 }
 
