existing code added

--- a/SRSP/app/build.gradle
+++ b/SRSP/app/build.gradle
@@ -19,7 +19,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support:support-v4:26.0.1'
     implementation 'com.android.support:design:26.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
@@ -30,14 +29,11 @@ dependencies {
     implementation 'com.unstoppable:submitbutton:1.1.3'
     implementation 'com.jaredrummler:material-spinner:1.2.5'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
-    implementation 'com.gjiazhe:scrollparallaximageview:1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.github.dimorinny:floating-text-button:0.0.4'
-    implementation 'com.etsy.android.grid:library:1.0.5'
     implementation 'org.osmdroid:osmdroid-android:6.0.1'
-    implementation 'com.github.MKergall:osmbonuspack:6.5.1'
     implementation 'com.google.android.gms:play-services-location:9.2.0'
     implementation 'com.google.android.gms:play-services-places:9.2.0'
+
     implementation 'com.github.mjn1369:prettydialog:1.0.4'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -46,3 +42,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
 }
+apply plugin: 'com.google.gms.google-services'
